SONAR-10805 Fix unwanted content overlap on narrow screens

--- a/server/sonar-web/src/main/js/app/styles/components/page.css
+++ b/server/sonar-web/src/main/js/app/styles/components/page.css
@@ -259,6 +259,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   background-color: var(--barBackgroundColor);
+  z-index: 100;
 }
 
 .layout-page-side {
